--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
         "laravel/sanctum": "^3.3",
         "laravel/telescope": "^5.2",
         "laravel/tinker": "^2.8",
+        "livewire/livewire": "^3.5",
+        "power-components/livewire-powergrid": "^5.10",
         "spatie/laravel-permission": "^6.9"
     },
     "require-dev": {
