--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=FoodOrderingSystem
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:YhuL6a53HOAqUwkmuSfYB9jGCPfrZmhAl+HIX3Ij3a8=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,8 +11,8 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
+DB_DATABASE=fooddb
+DB_USERNAME=dbuser
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
@@ -28,7 +28,7 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
+MAIL_MAILER=log
 MAIL_HOST=mailpit
 MAIL_PORT=1025
 MAIL_USERNAME=null
